<resources>
    <string name="app_name">Paathshala</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--          DASHBOARD          -->
    <string name="dashboard_attandence">ATTANDENCE</string>
    <string name="dashboard_holiday">HOLIDAY</string>
    <string name="dashboard_time_table">TIME TABLE</string>
    <string name="dashboard_complaint">COMPLAINT</string>
    <string name="dashboard_fees">FEES</string>
    <string name="dashboard_marksheet">MARKSHEET</string>

    <!-- Login form strings -->
    <string name="login_username">USERNAME</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_dob">SELECT DATE</string>
    <string name="login_role">ROLE</string>
    <string name="login_button">LOGIN</string>
    <string name="login_forgot_password">FORGOT PASSWORD</string>

    <!-- Login 1 form string -->
    <string name="login_institute_id">Institute id</string>
    <string name="login_session">Session</string>
    <string name="login_student_scholar_no">Student Scholar No</string>
    <string name="login_password_1">Password</string>
    <string name="login_bottom_text">Manage Your Institute Easily and Perfectly</string>
    <string name="login_get_institute_id">Get Institute Id</string>
    <string name="login_login">Login</string>
    <string name="login_forgot_password_1">Forgot Password</string>


    <!--  STUDENT INFO   -->
    <string name="student_info_name">STUDENT NAME HERE</string>
    <string name="student_info_registration_no">REGISTRATION NUMBER</string>
    <string name="student_info_sr_no">SCHOLER NUMBER</string>
    <string name="student_info_admin_date">ADMISSION DATE</string>
    <string name="student_info_ori_admin_date">ORIENTATION DATE</string>
    <string name="student_info_house">HOUSE</string>
    <string name="student_info_dob">DATE OF BIRTH</string>
    <string name="student_info_save">SAVE</string>

    <!--  PARENT INFO   -->
    <string name="parent_info_father_name">FATHERS NAME</string>
    <string name="parent_info_mother_name">MOTHERS NAME</string>
    <string name="parent_info_father_occupation">FATHERS OCCUPATION</string>
    <string name="parent_info_father_income">FATHERS INCOME</string>
    <string name="parent_info_mobile">MOBILE NO</string>
    <string name="parent_info_address">PERMANENT ADDRESS</string>
    <string name="parent_info_save">SAVE</string>

    <!--  GUARDIAN INFO   -->
    <string name="guardian_info_name">GUARDIANS NAME</string>
    <string name="guardian_info_email">E-MAIL</string>
    <string name="guardian_info_phone_no">PHONE NO</string>
    <string name="guardian_info_mobile">MOBILE NO</string>
    <string name="guardian_info_remark">REMARK</string>
    <string name="guardian_info_address">CORRESPONDING ADDRESS</string>
    <string name="guardian_info_save">SAVE</string>

    <!-- CHANGE PASSWORD  -->
    <string name="old_password">ENTER OLD PASSWORD</string>
    <string name="new_password">ENTER NEW PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="password_update">UPDATE</string>

    <!--  COMPLAINT  -->
    <string name="submit_complaint">SUBMIT</string>
    <string name="cancel_complaint">CANCEL</string>
    <string name="complaint_subject">SUBJECT</string>
    <string name="complaint_message">TYPE YOUR COMPLAINT HERE</string>

    <!--  ADMISSION FORM  -->
    <string name="parent_info">PARENTS INFORMATION</string>
    <string name="guardian_info">GUARDIANS INFORMATION</string>
    <string name="student_info">STUDENT INFORMATION</string>
    <string name="admission_date">DATE OF ADMISSION</string>
    <string name="student_class">CLASS</string>
    <string name="student_section">SECTION</string>
    <string name="student_category">CATEGORY</string>
    <string name="student_religion">RELIGION</string>
    <string name="student_handicap">HANDICAPPED</string>
    <string name="student_type">STUDENT TYPE</string>
    <string name="student_gender">GENDER</string>
    <string name="student_mode">MODE</string>
    <string name="student_faculty">FACULTY</string>
    <string name="student_admission_type">ADMISSION TYPE</string>
    <string name="student_cast">CAST</string>
    <string name="student_nationality">NATIONALITY</string>
    <string name="student_bpl">BPL</string>
    <string name="student_email">EMAIL</string>
    <string name="student_mobile">MOBILE NO</string>

    <!--  STUDENT FEES    -->
    <string name="student_fee_info">STUDENT FEES INFO</string>
    <string name="student_fee_deposit_detail">DEPOSIT DETAIL</string>
    <string name="fee_name">FEES NAME</string>
    <string name="fee_type">FEE TYPE</string>
    <string name="fee_total">TOTAL FEES</string>
    <string name="fee_deposit">DEPOSIT</string>
    <string name="fee_t_discount">T DISCOUNT</string>
    <string name="fee_balance">BALANCE</string>

    <string name="fee_amount">AMOUNT</string>
    <string name="fee_receipt_no">RECEIPT NO.</string>
    <string name="fee_receipt_date">RECEIPT DATE</string>
    <string name="fee_payment_mode">PAYMENT MODE</string>

    <string name="fee_type_regular">REGULAR</string>
    <string name="fee_installment_1">1ST INSTALL</string>
    <string name="fee_installment_2">2ND INSTALL</string>
    <string name="fee_installment_3">3RD INSTALL</string>
    <string name="total">TOTAL</string>

    <string name="time_table_exam_type">Exam Type</string>


    <string name="data_last_updated">Last Updated : </string>

    <!--  GET INSTITUTE ID   -->
    <string name="institute_id">ID :</string>
    <string name="institute_name">School Name :</string>
    <string name="institute_city_id">City Id :</string>
    <string name="institute_active">Active :</string>
    <string name="institute_address">School Address :</string>

    <!--    FORGOT PASSWORD     -->
    <string name="forgot_pass_user_id">Enter Your Scholer Id</string>
    <string name="forgot_pass_school_id">Enter Your School Id</string>
    <string name="forgot_pass_submit">Submit</string>

    <!--   GET INSTITUTE INFO -->
    <string name="get_institute_prompt_id">Institute Id</string>
    <string name="get_institute_id">16</string>
    <string name="get_institute_prompt_city_name">City Name</string>
    <string name="get_institute_city_name">JAIPUR</string>
    <string name="get_institute_prompt_school_name">School Name</string>
    <string name="get_institute_school_name">Websquare School,  F-112,113 VDN Jaipur</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="exam_type">
        <item>Select</item>
        <item>All</item>
        <item>Marksheet</item>
        <item>Grading</item>
        <item>Inhouse</item>
    </string-array>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
