<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_father_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/parent_info_father_name"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_mother_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/parent_info_mother_name"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_father_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/parent_info_father_occupation"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_father_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/parent_info_father_income"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/parent_info_mobile"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/parent_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/parent_info_address"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/parent_info_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin"
                android:textAllCaps="true"
                android:text="@string/parent_info_save"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:textColor="@color/button_foreground"
                android:background="@drawable/button_fill_background"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
