<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.b2infosoft.paathshala.activity.LoginActivity_1">
    <ScrollView
        android:id="@+id/login_form_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/textView"
        android:layout_alignParentTop="true"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_paathsala"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">

                <EditText
                    android:id="@+id/login_institute_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_institute_id"
                    android:inputType="number"
                    android:singleLine="true"
                    android:fontFamily="fonts/Roboto_Regular.ttf"
                    android:textColor="@color/edit_text_foreground" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">

                <EditText
                    android:id="@+id/login_session"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"
                    android:drawableRight="@drawable/dropdown_arrow"
                    android:hint="@string/login_session"
                    android:clickable="true"
                    android:focusable="false"
                    android:editable="false"
                    android:inputType="text"
                    android:singleLine="true"
                    android:fontFamily="fonts/Roboto_Regular.ttf"
                    android:textColor="@color/edit_text_foreground" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">

                <EditText
                    android:id="@+id/login_student_scholar_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_student_scholar_no"
                    android:inputType="number"
                    android:singleLine="true"
                    android:fontFamily="fonts/Roboto_Regular.ttf"
                    android:textColor="@color/edit_text_foreground" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">

                <EditText
                    android:id="@+id/login_password_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_1"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    android:fontFamily="fonts/Roboto_Regular.ttf"
                    android:textColor="@color/edit_text_foreground" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/get_institute_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:autoLink="none"
                android:clickable="true"
                android:background="@drawable/text_view_background"
                android:text="@string/login_get_institute_id"
                android:textColor="@color/text_link" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin"
                android:fontFamily="fonts/Roboto_Medium.ttf"
                android:background="@drawable/button_fill_background"
                android:text="@string/login_login"
                android:textColor="@color/button_foreground" />

            <Button
                android:id="@+id/login_button_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin_1"
                android:layout_marginBottom="@dimen/button_top_margin_1"
                android:background="@drawable/button_empty_background"
                android:fontFamily="fonts/Roboto_Medium.ttf"
                android:text= "@string/login_forgot_password_1"
                android:textColor="@color/button_background" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/info_background"
        android:padding="5dp"
        android:fontFamily="fonts/Roboto_Medium.ttf"
        android:text="@string/login_bottom_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/button_foreground"
        android:textStyle="normal" />
</RelativeLayout>
