<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    tools:context=".activity.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_name"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_email"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_phone_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_phone_no"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_mobile"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_remark"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/guardian_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:editable="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/guardian_info_address"
                    android:textAllCaps="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/guardian_info_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin"
                android:textAllCaps="true"
                android:text="@string/parent_info_save"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:textColor="@color/button_foreground"
                android:background="@drawable/button_fill_background"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
