<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:layout_gravity="center"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edit_text_hint_foreground"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                >
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/user_name"
                    android:drawablePadding="@dimen/edit_text_drawable_padding" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/login_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_dob"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/dob_icon"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:textColorHint="@color/edit_text_hint_foreground">
                <EditText
                    android:id="@+id/login_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_role"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/role"
                    android:drawableRight="@drawable/dropdown_arrow"
                    android:drawablePadding="@dimen/edit_text_drawable_padding"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_top_margin"
                android:textAllCaps="true"
                android:text="@string/login_button"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/button_left_margin"
                android:layout_marginRight="@dimen/button_right_margin"
                android:textColor="@color/button_foreground"
                android:background="@drawable/button_fill_background"
                />

            <TextView
                android:id="@+id/login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/edit_text_top_margin"
                android:text="@string/login_forgot_password"
                android:textColor="@color/text_link"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

